# x-moderator

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  LICENSE.txt  README.md  xbleach.html
api/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-build.sh  docker-run.sh
api/protobuf/: xmoderator.proto
common/: Cargo.toml
common/src/: models.rs
docs/: api.md  logging.md
docs/api/v1/: bot.md  log.md
migrator/: Dockerfile  README.md  docker-bootstrap.sh  docker-build.sh  docker-config.sh  docker-run.sh  migrator.py  names.py  requirements.txt  venv.sh
migrator/migrations/: manifest.json
migrator/migrations/1727588702/: down.sql  up.sql
migrator/migrations/1727588702_clever-ramanujan/: down.sql  up.sql
migrator/migrations/1727588703/: down.sql  up.sql
migrator/migrations/1727588703_dreamy-bohr/: down.sql  up.sql
selenium/: example_config.toml
